@@ -401,6 +401,7 @@
     * 3807 FIX: mssql_counters: fixed crash when the check is unable to parse a timestamp provided by the plugin
     * 3808 FIX: df.include: fixed incorrect levels calculations on very small filesystems...
     * 3810 FIX: windows agent: no longer truncates plugin output, no longer freezes when plugin produces too much output...
+    * 3812 FIX: winperf_phydisk: reintroduced read and write queue length performance data...
 
     Multisite:
     * 3187 notification view: new filter for log command via regex
